--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,6 +81,40 @@ jobs:
             bin/openocd-*-mac.zip
             bin/riscv-toolchain-*.zip
 
+  build_macos_intel:
+    name: Build Intel MacOS
+    # runs-on: [self-hosted, macOS]
+    runs-on: 'macos-13'
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Homebrew
+        if: runner.environment == 'github-hosted'
+        id: set-up-homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+      - name: Setup SSH Auth
+        if: runner.environment == 'github-hosted'
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }}
+      - name: Build
+        run: ./build_macos_intel.sh
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: tools-mac-x64
+          path: |
+            bin/openocd-*-mac.zip
+            bin/riscv-toolchain-*.zip
+      - name: Add Release Asset
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            bin/openocd-*-mac.zip
+            bin/riscv-toolchain-*.zip
+
   build_linux:
     name: Build Linux
     # strategy:
